fix(anime-service): change Genre data structure from 'List' to 'Set'